Defined data source definition page.

--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu_zh_CN.properties
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu_zh_CN.properties
@@ -1,5 +1,6 @@
 menu.home=\u9996\u9875
 menu.prefs=\u9996\u9009\u9879
+menu.ds=\u6570\u636E\u6E90
 menu.dict=\u5B57\u5178
 menu.menues=\u83DC\u5355
 menu.msgs=\u6D88\u606F\u8D44\u6E90
