--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu_zh_CN.properties
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu_zh_CN.properties
@@ -4,3 +4,6 @@ menu.ds=\u6570\u636E\u6E90
 menu.dict=\u5B57\u5178
 menu.menues=\u83DC\u5355
 menu.msgs=\u6D88\u606F\u8D44\u6E90
+menu.res=\u8D44\u6E90
+menu.res.pages=\u9875\u9762
+menu.res.sections=\u533A\u5757
