Added entity to datasource mapping.

--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu_zh_CN.properties
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu_zh_CN.properties
@@ -7,3 +7,5 @@ menu.msgs=\u6D88\u606F\u8D44\u6E90
 menu.res=\u8D44\u6E90
 menu.res.pages=\u9875\u9762
 menu.res.sections=\u533A\u5757
+menu.entities.builtin=\u5185\u5EFA\u5B9E\u4F53
+menu.builtin.accounts=\u8D26\u6237
